syntax = "proto3";

package pb;

option go_package = "github.com/losuch/fc-order/pb";

import "account.proto";

message CreateAccountRequest {
    string email = 1;
    string password = 2;
    string role = 3;
}

message GetAccountListRequest {}

message GetAccountListResponse {
    repeated Account accounts = 1;
}

message GetAccountRequest {
    int64 id = 1;
}

message UpdateAccountRequest {
    int64 id = 1;
    string password = 2;
    string role = 3;
}

message DeleteAccountRequest {
    int64 id = 1;
}

message DeleteAccountResponse {
    string status = 1;
}