syntax = "proto3";

package pb;

import "rpc_create_account.proto";

option go_package = "github.com/losuch/fc-order/pb";

service FcOrder {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
}